After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 726310 - Segfault getting EvLinkAccessible indices when caret navigating amongst pages
Segfault getting EvLinkAccessible indices when caret navigating amongst pages
Status: RESOLVED FIXED
Product: evince
Classification: Core
Component: PDF
3.11.x
Other Linux
: Normal major
: ---
Assigned To: Evince Maintainers
Evince Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-03-14 09:10 UTC by Joanmarie Diggs (IRC: joanie)
Modified: 2014-03-14 21:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
accessible-event listener (552 bytes, text/x-python)
2014-03-14 09:10 UTC, Joanmarie Diggs (IRC: joanie)
  Details
test case (243.32 KB, application/pdf)
2014-03-14 09:11 UTC, Joanmarie Diggs (IRC: joanie)
  Details
proposed patch (1.70 KB, patch)
2014-03-14 09:12 UTC, Joanmarie Diggs (IRC: joanie)
committed Details | Review

Description Joanmarie Diggs (IRC: joanie) 2014-03-14 09:10:39 UTC
Created attachment 271833 [details]
accessible-event listener

Steps to reproduce:
1. Launch the attached accessible-event listener in a terminal
2. Open the attached document in Evince
3. Enable caret navigation (F7)
4. Arrow Down line by line until you cross from page 2 into page 3

Expected results: No segfault

Actual results: Reliable segfault

  • #0 ev_hyperlink_get_end_index
    at ev-link-accessible.c line 166
  • #1 impl_get_EndIndex
    at hyperlink-adaptor.c line 65
  • #2 impl_prop_GetSet
    at droute.c line 363
  • #3 handle_properties
    at droute.c line 442
  • #4 handle_message
    at droute.c line 596
  • #5 _dbus_object_tree_dispatch_and_unlock
    from /lib64/libdbus-1.so.3
  • #6 dbus_connection_dispatch
    from /lib64/libdbus-1.so.3
  • #7 message_queue_dispatch
    at atspi-gmain.c line 89
  • #8 g_main_dispatch
    at gmain.c line 3064
  • #9 g_main_context_dispatch
    at gmain.c line 3663
  • #10 g_main_context_iterate
    at gmain.c line 3734
  • #11 g_main_context_iteration
    at gmain.c line 3795
  • #12 g_application_run
    at gapplication.c line 2114
  • #13 main
    at main.c line 316

Comment 1 Joanmarie Diggs (IRC: joanie) 2014-03-14 09:11:24 UTC
Created attachment 271834 [details]
test case
Comment 2 Joanmarie Diggs (IRC: joanie) 2014-03-14 09:12:55 UTC
Created attachment 271835 [details] [review]
proposed patch
Comment 3 Carlos Garcia Campos 2014-03-14 14:40:26 UTC
Comment on attachment 271835 [details] [review]
proposed patch

Thanks
Comment 4 Joanmarie Diggs (IRC: joanie) 2014-03-14 21:44:30 UTC
Comment on attachment 271835 [details] [review]
proposed patch

Thank you.

https://git.gnome.org/browse/evince/commit/?id=5e4d9f872cb94ead13df1861ed812007c75eff42