libview: Take caret navigation into account when getting AtkHyperlink indices

https://bugzilla.gnome.org/show_bug.cgi?id=726310